# gsmodule

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gsmodule/: CMakeLists.txt
gsmodule/include/: gs_api_commands.h  gs_api_interface.h  gsapi_client.h  gsapi_commands.h  gspatch_element.h  gspatch_parser.h
gsmodule/source/: gs_api_interface.cpp  gsapi_client.cpp  gspatch_parser.cpp
tests/: CMakeLists.txt  main.cpp
